Char create fixes and base for inv ui

--- a/Interface/screen/character-creation/index.html
+++ b/Interface/screen/character-creation/index.html
@@ -26,7 +26,7 @@
 				</button>
 			</div>
 
-			<form onsubmit="return false;">
+			<form id="character-create-form" onsubmit="return false;">
 				<div class="modal-body">
 					<div class="form-row">
 						<div class="form-group col-md-4">
@@ -65,7 +65,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-					<button type="submit" class="btn btn-success btn-lg">Create Character</button>
+					<button type="submit" id="character-create-submit" class="btn btn-success btn-lg">Create Character</button>
 				</div>
 			</form>
 		</div>
